fix odd alignment on pools treelist

--- a/src/assets/styles/themes/ix-blue.scss
+++ b/src/assets/styles/themes/ix-blue.scss
@@ -1205,4 +1205,14 @@ $primary-dark: darken( map-get($md-primary, 500), 8% );
     background-color:rgba(123,123,123,0.2);
   }
 
+  .ui-treetable-resizable .ui-treetable-tfoot>tr>td, .ui-treetable-resizable .ui-treetable-tbody>tr>td {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+
+  .ui-treetable-thead {
+    text-align: left;
+  }
+
 } // end of ix theme
